# django-clearplaintext

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  build.sh  deploy.sh  pyproject.toml  requirements.txt  test_settings.py  tox.ini
src/clearplaintext/: utils.py
src/clearplaintext/templatetags/: clearplaintext_filters.py
tests/: test_clearplaintext_filters.py  test_utils.py
