[project]
name = "django-clearplaintext"
version = "1.0.1"
authors = [
    { name="Aidas Bendoraitis", email="aidas.bendoraitis@websightful.co" },
]
description = "Django template filter for cleaning up whitespace in plain text"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
license = "MIT"
licence-files = ["LICEN[CS]E*"]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/websightful/django-clearplaintext"
Issues = "https://github.com/websightful/django-clearplaintext/issues"

[tool.bumpversion]
current_version = "1.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/clearplaintext/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = '## [Unreleased]'
replace = '''## [Unreleased]
...

## [v{new_version}] - {utcnow:%Y-%m-%d}'''

[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"
